fixed overflow

--- a/src/assets/scss/utilities.scss
+++ b/src/assets/scss/utilities.scss
@@ -28,6 +28,8 @@ html {
 
 body {
 	background: $bg-color;
+	max-width: 100vw;
+	overflow-x: hidden;
 }
 
 .orange {
